--- a/operators/CMakeLists.txt
+++ b/operators/CMakeLists.txt
@@ -43,6 +43,7 @@ add_holohub_operator(video_write_bitstream)
 add_holohub_operator(visualizer_icardio)
 add_holohub_operator(volume_loader)
 add_holohub_operator(volume_renderer)
+add_holohub_operator(vtk_renderer)
 add_holohub_operator(XrFrameOp)
 add_holohub_operator(XrTransformOp)
 add_holohub_operator(yuan_qcap DEPENDS EXTENSIONS yuan_qcap)
