add vtk_renderer to the endoscopy_tool_tracking cpp app
Signed-off-by: Vicente Adolfo Bolea Sanchez <vicente.bolea@kitware.com>

--- a/applications/CMakeLists.txt
+++ b/applications/CMakeLists.txt
@@ -37,7 +37,7 @@ add_holohub_application(endoscopy_out_of_body_detection HOLOSCAN_SAMPLE_APP)
 add_holohub_application(endoscopy_tool_tracking DEPENDS
                         OPERATORS lstm_tensor_rt_inference
                                   tool_tracking_postprocessor
-                                  OPTIONAL deltacast_videomaster yuan_qcap
+                                  OPTIONAL deltacast_videomaster yuan_qcap vtk_renderer
                         HOLOSCAN_SAMPLE_APP
                         )
 
