--- a/applications/endoscopy_tool_tracking/cpp/endoscopy_tool_tracking.yaml
+++ b/applications/endoscopy_tool_tracking/cpp/endoscopy_tool_tracking.yaml
@@ -26,9 +26,10 @@ extensions:
 # Uncomment the following extension when using yuan as source
 #  - gxf_extensions/yuan_qcap/libgxf_qcap_source.so
 
-source: "replayer" # "replayer" or "aja" or "deltacast" or "yuan"
-record_type: "none"  # or "input" if you want to record input video stream, or "visualizer" if you want
-                     # to record the visualizer output.
+source: "replayer"    # "replayer" or "aja" or "deltacast" or "yuan"
+visualizer: "holoviz" # "holoviz" or "vtk"
+record_type: "none"   # or "input" if you want to record input video stream, or "visualizer" if you want
+                      # to record the visualizer output.
 
 external_source:
   rdma: true
@@ -117,7 +118,7 @@ format_converter_deltacast:
   scale_min: 0.0
   scale_max: 255.0
   resize_width: 854
-  resize_height: 480  
+  resize_height: 480
 
 lstm_inference:
   input_tensor_names:
@@ -207,3 +208,13 @@ holoviz_overlay:
         - Clipper
         - Irrigator
         - Spec.Bag
+
+vtk_op:
+  labels:
+    - Grasper
+    - Bipolar
+    - Hook
+    - Scissors
+    - Clipper
+    - Irrigator
+    - Spec.Bag
